--- a/pyMDMix/data/defaults/md-settings.cfg
+++ b/pyMDMix/data/defaults/md-settings.cfg
@@ -14,7 +14,7 @@ restrMode = FREE            # Restraining scheme: FREE, HA (heavy atoms) or BB 
 float-restrForce = 0.0      # Restraining force if applicable. Default 0 kcal/mol.A^2
 int-nanos = 20              # Production length in nanoseconds. Default: 20ns
 float-temp = 300            # Simulation temperature. Default = 300K
-mdProgram = AMBER           # Default simulation program. Options: AMBER, NAMD or OPENMM currently
+mdProgram = OPENMM           # Default simulation program. Options: AMBER, NAMD or OPENMM currently
 int-trajfrequency = 500     # Trajectory writing frequency  = 1000 snapshots per nanosecond = int-production_nsteps / int-trajfrequency
 int-minsteps = 5000				# Number of minimization steps to run
 int-heating_steps = 100000                      # Heating steps for each file. 100.000 steps = 200ps
@@ -23,7 +23,7 @@ int-npt_eq_steps = 500000                       # 1ns equilibration at NPT
 int-prod_steps = 500000                     # 1ns production files = prod_steps*(md_timestep/10e6)
 float-md_timestep = 2                           # 2 fs timestep
 int-namd_heating_steps = 500000                 # 1ns equilibration total time to increase temperature from float-heating_tempi to float-temp in NAMD
-list-FF = leaprc.ff99SB, leaprc.gaff            # Default forcefield files to load when opening tLeap
+list-FF = leaprc.protein.ff14SB, leaprc.gaff            # Default forcefield files to load when opening tLeap
 production_ensemble = NVT			# Default ensemble for production run (NVT is slightly faster than NPT). Options: NVT or NPT
 float-npt_pressure = 1.0                        # Default pressure for npt ensemble
 
