--- a/pyMDMix/data/defaults/settings.cfg
+++ b/pyMDMix/data/defaults/settings.cfg
@@ -23,7 +23,7 @@ int-DEF_NREPLICAS = 1
 AMBER_MIN_COMPLETE = Maximum number of minimization cycles reached.
 AMBER_MD_COMPLETE = Total CPU time:
 NAMD_FILE_COMPLETE = End of program
-list-DEF_AMBER_FF = leaprc.ff99SB, leaprc.gaff
+list-DEF_AMBER_FF = leaprc.protein.ff14SB, leaprc.gaff
 
 # Expected trajetory file extensions
 list-avail_trajext = nc, netcdf, x, x.gz, dcd
@@ -32,7 +32,7 @@ list-avail_trajext = nc, netcdf, x, x.gz, dcd
 int-DISABLE_BISKIT_LOADING_WARNS = 1 
 
 # Executables
-AMBER_MIN_EXE = sander
+AMBER_MIN_EXE = pmemd.cuda
 AMBER_PROD_EXE = pmemd.cuda
 AMBER_AMBPDB = ambpdb
 AMBER_PTRAJ = cpptraj
